gradle: Move errorprone in multi-project scope