@@ -1,10 +1,8 @@
-import net.ltgt.gradle.errorprone.CheckSeverity
-import net.ltgt.gradle.errorprone.errorprone
 import javax.xml.parsers.DocumentBuilderFactory
 
 plugins {
-    id("java")
-    id("net.ltgt.errorprone") version "3.1.0"
+//    id("java")
+//    id("net.ltgt.errorprone") version "3.1.0"
     checkstyle
 }
 
@@ -19,11 +17,6 @@ repositories {
 }
 
 dependencies {
-    errorprone("com.uber.nullaway:nullaway:0.10.25")
-    compileOnly("com.google.code.findbugs:jsr305:3.0.2")
-    errorprone("com.google.errorprone:error_prone_core:$errorProneVersion")
-    compileOnly("com.google.errorprone:error_prone_annotations:$errorProneVersion")
-
     annotationProcessor(project(":java-annotations"))
     implementation(project(":java-annotations"))
 
@@ -39,28 +32,6 @@ checkstyle {
 tasks.test {
     useJUnitPlatform()
     jvmArgs("--enable-preview")
-}
-
-tasks.withType<JavaCompile> {
-    sourceCompatibility = "17"
-    targetCompatibility = "17"
-
-//    options.compilerArgs.plusAssign("--enable-preview")
-
-    if (!name.toLowerCase().contains("test")) {
-        options.errorprone {
-            check("NullAway", CheckSeverity.ERROR)
-            option("NullAway:AnnotatedPackages", "vadl")
-            disable("EqualsGetClass")
-        }
-    }
-}
-
-
-tasks {
-    compileTestJava {
-        options.errorprone.isEnabled.set(false)
-    }
 }
 
 
